--- a/views/users_alan.handlebars
+++ b/views/users_alan.handlebars
@@ -306,25 +306,25 @@
 
 
   <div class = col-md-6>                  <!-- <div class="container"> -->
-  <h2>Alerts</h2>
-  <p>The a element with class="close" and data-dismiss="alert" is used to close the alert box.</p>
-  <div class="alert alert-success">
-    <a href="#" class="" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Success!</strong> This alert box could indicate a successful or positive action.
+  <h2>Required Documents</h2>
+  <div class="form-group">
+      <!-- <label>Checkboxes</label> -->
+      <div class="checkbox">
+          <label>
+              <input type="checkbox" value="">Identity/Passport document
+          </label>
+      </div>
+      <div class="checkbox">
+          <label>
+              <input type="checkbox" value="">Three months payment statement
+          </label>
+      </div>
+      <div class="checkbox">
+          <label>
+              <input type="checkbox" value="">Latest Payslip
+          </label>
+      </div>
   </div>
-  <div class="alert alert-info">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Info!</strong> This alert box could indicate a neutral informative change or action.
-  </div>
-  <div class="alert alert-warning">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Warning!</strong> This alert box could indicate a warning that might need attention.
-  </div>
-  <div class="alert alert-danger">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-    <strong>Danger!</strong> This alert box could indicate a dangerous or potentially negative action.
-  </div>
-
 </div>
                 <!--End Page Header -->
             </div>
