--- a/views/progress_tenant.handlebars
+++ b/views/progress_tenant.handlebars
@@ -11,7 +11,7 @@
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link href="assets/plugins/pace/pace-theme-big-counter.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
-      <link href="assets/css/main-style.css" rel="stylesheet" />
+    <link href="assets/css/main-style.css" rel="stylesheet" />
 
 
 </head>
@@ -91,7 +91,7 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <span class="top-label label label-success">4</span>  <i class="fa fa-tasks fa-3x"></i>
+                        <span class="top-label label label-success">4</span> <i class="fa fa-tasks fa-3x"></i>
                     </a>
                     <!-- dropdown tasks -->
                     <ul class="dropdown-menu dropdown-tasks">
@@ -171,7 +171,7 @@
 
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <span class="top-label label label-warning">5</span>  <i class="fa fa-bell fa-3x"></i>
+                        <span class="top-label label label-warning">5</span> <i class="fa fa-bell fa-3x"></i>
                     </a>
                     <!-- dropdown alerts-->
                     <ul class="dropdown-menu dropdown-alerts">
@@ -247,11 +247,9 @@
                     <li>
                         <!-- user image section-->
                         <div class="user-section">
-                            <div class="user-section-inner">
-                                <img src="assets/img/user.jpg" alt="">
-                            </div>
+
                             <div class="user-info">
-                                <div>Tenant</div>
+                                <div>Tenant </div>
                                 <div class="user-text-online">
                                     <span class="user-circle-online btn btn-success btn-circle "></span>&nbsp;Online
                                 </div>
@@ -273,18 +271,26 @@
                     </li>
 
                     <li class="active">
-                        <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard</a>
+                        <a href="/"><i class="fa fa-dashboard fa-fw"></i>Dashboard Tenant</a>
+                    </li>
+
+                    <li class="active">
+                        <a href="/agent"><i class="fa fa-dashboard fa-fw"></i>Dashboard Agent</a>
                     </li>
                     <li>
-                        <a href="/forms"><i class="fa fa-table fa-fw"></i>My Documents</a>
+                        <a href="/agent"><i class="fa fa-table fa-fw"></i>My Documents</a>
                     </li>
 
                     <li>
-                       <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i>Appliction Progress</a>
-                   </li>
+                       <a href="/progress_agent"><i class="fa fa-flask fa-fw"></i>Tenant Document Progress</a>
+                    </li>
 
                     <li>
-                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>upload</a>
+                        <a href="/progress_tenant"><i class="fa fa-flask fa-fw"></i> Tenant Application Progress</a>
+                    </li>
+
+                    <li>
+                        <a href="/upload"><i class="fa fa-edit fa-fw"></i>Image upload</a>
                     </li>
 
 
@@ -306,11 +312,13 @@
             </div>
 
                <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-10">
                     <!--Timeline -->
 
                     <div class="col-md-8">
-  <h2>Progress</h2>
+                      <div class="panel panel-primary">
+
+  <h4>Progress</h4>
     <div class="progress">
     <div class="progress-bar progress-bar-success" role="progressbar" style="width:33.3%">
 Documents Upload    </div>
@@ -321,7 +329,8 @@ Image Verification    </div>
     </div>
   </div>
 </div>
-                    <div class="panel panel-primary">
+
+<div class="panel panel-primary">
                         <div class="panel-heading">
                             <i class="fa fa-clock-o fa-fw"></i>Timeline
                         </div>
@@ -334,63 +343,32 @@ Image Verification    </div>
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
+                                            <h4 class="timeline-title">Application to Apartment successful</h4>
                                             <p>
-                                                <small class="text-muted"><i class="fa fa-time"></i>11 hours ago via Twitter</small>
+                                                <small class="text-muted"><i class="fa fa-time"></i>11 hours ago</small>
                                             </p>
                                         </div>
                                         <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
+                                            <p>Agent has approved application, please verify your documents</p>
                                         </div>
                                     </div>
                                 </li>
-                                <li class="timeline-inverted">
-                                    <div class="timeline-badge warning">
-                                        <i class="fa fa-credit-card"></i>
-                                    </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="timeline-badge danger">
-                                        <i class="fa fa-credit-card"></i>
-                                    </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="timeline-inverted">
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
-                                </li>
+
+
+
                                 <li>
                                     <div class="timeline-badge info">
                                         <i class="fa fa-save"></i>
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
+                                            <h4 class="timeline-title">Agent requests verification of your documents</h4>
                                         </div>
+                                        <p>
+                                            <small class="text-muted"><i class="fa fa-time"></i>11 hours ago</small>
+                                        </p>
                                         <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
+                                            <p>Choose documents from database and verify them with facial recognition model</p>
                                             <hr>
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
@@ -412,28 +390,10 @@ Image Verification    </div>
                                         </div>
                                     </div>
                                 </li>
-                                <li>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="timeline-inverted">
+
                                     <div class="timeline-badge success">
-                                        <i class="fa fa-thumbs-up"></i>
                                     </div>
-                                    <div class="timeline-panel">
-                                        <div class="timeline-heading">
-                                            <h4 class="timeline-title">Timeline Event</h4>
-                                        </div>
-                                        <div class="timeline-body">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel justo eu mi scelerisque vulputate. Aliquam in metus eu lectus aliquet egestas.</p>
-                                        </div>
-                                    </div>
+
                                 </li>
                             </ul>
                         </div>
